# auto-stock

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  requirements.txt
autostock/: backtest.py  backtest_grid.py  backtest_grid_report.py  cli.py  config.py  database.py  engine.py  ib_client.py  reporting.py  risk.py  strategy.py
config/: backtest_grid.yaml  config.yaml
tests/: test_backtest_grid.py  test_backtest_grid_report.py  test_backtest_history_split.py  test_backtest_mode.py  test_cli_client_id.py  test_config_capital.py  test_config_default_overlay.py  test_database_sync.py  test_engine_poll.py  test_ib_client.py  test_risk.py  test_strategy.py
